# Parampara.ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Home.py  LICENSE  README.md  REPORT.md  Users_Acquisition_Strategy.md  app.py  audio-text-english.py  gemini-test.py  main.py  pyproject.toml  requirements.in  requirements.txt
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md  Feature Request.md  Refactoring.md
.gitlab/merge_request_templates/: Bug.md  Default.md  Documentation.md
data/: 114db1e4-84ec-4765-892f-5346f776146e.json  1b73c750-f49c-41e6-b3a2-448e8d2e7007.json  343d4d4b-7e21-463c-a534-ce5f7833b77e.json  6703b758-a61e-41f9-b9f8-33121a4890f4.json  89a88348-165e-4152-82d7-3afcdfe8665b.json  8e8a87a0-69a6-4b58-a70f-7d29058403b5.json  cf34a595-dbeb-4cc2-a123-c1fd8cfb2936.json  f996efce-f590-46fa-b5ad-a8c8ea4aba1d.json  fb009f9b-a1c3-41c5-bd54-61e7f89b384c.json
pages/: Collection.py  Upload.py
parampara_ai/: Home.py
parampara_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
parampara_ai/data/: 87e7e966-c345-4379-afb6-c2812f575a0b.json
